--- a/app/views/admin/prediction_params/edit.html.erb
+++ b/app/views/admin/prediction_params/edit.html.erb
@@ -19,5 +19,5 @@
     </div>
     <%= form.submit %>
   <% end %>
-  <button data-action="click->dialog#removeDialog" data-dialog-target="closeButton">Close Modal</button>
+  <button data-action="dialog#removeDialog" data-dialog-target="closeButton">Close Modal</button>
 <% end %>
