--- a/app/views/admin/subreddit_posts/index.html.erb
+++ b/app/views/admin/subreddit_posts/index.html.erb
@@ -7,7 +7,7 @@
     <table class="border-separate border-spacing-0 text-xs md:text-sm w-full rounded-xl overflow-hidden">
       <thead class="bg-gray-100">
         <tr>
-          <%== table_cols(%w[ups upvote_ratio url author permalink score title], class: 'py-2.5 text-center px-3') %>
+          <%== table_cols(%w[ups upvote_ratio subreddit url author score title], class: 'py-2.5 text-center px-3') %>
         </tr>
       </thead>
       <tbody>
@@ -15,9 +15,9 @@
           <tr class="even:bg-gray-50 odd:bg-white">
             <td class="text-center p-0.5 md:p-2"><%= subreddit_post.ups %></td>
             <td class="text-center p-0.5 md:p-2"><%= subreddit_post.upvote_ratio %></td>
+            <td class="text-center p-0.5 md:p-2"><%= subreddit_post.subreddit.subreddit %></td>
             <td class="text-center p-0.5 md:p-2 max-w-28 overflow-hidden overflow-ellipsis whitespace-nowrap"><%= subreddit_post.url %></td>
             <td class="text-center p-0.5 md:p-2"><%= subreddit_post.author %></td>
-            <td class="text-center p-0.5 md:p-2 max-w-28 overflow-hidden overflow-ellipsis whitespace-nowrap"><%= subreddit_post.permalink %></td>
             <td class="text-center p-0.5 md:p-2"><%= subreddit_post.score %></td>
             <td class="text-center p-0.5 md:p-2 max-w-28 overflow-hidden overflow-ellipsis whitespace-nowrap"><%= subreddit_post.title %></td>
             <td class="text-center p-0.5 md:p-2"><%= subreddit_post.created_at.strftime('%d %B, %Y') %></td>
