--- a/app/views/shared/_admin_sidebar.html.erb
+++ b/app/views/shared/_admin_sidebar.html.erb
@@ -1,3 +1,4 @@
+<%# TODO: Make the admin sidebar responsive for all screen sizes %>
 <nav class="flex-shrink-0 fixed md:relative min-h-full bg-white shadow-xl">
   <div data-sidebar-target="sidebar" class="min-w-full sticky top-0 transition-all overflow-y-hidden hover:overflow-y-auto overflow-x-hidden duration-100">
     <div class="flex-center mt-4">
