--- a/verse/src/style.css
+++ b/verse/src/style.css
@@ -7,7 +7,13 @@
 @layer components {
   .offset-box-shadow {
     box-shadow: rgba(0, 0, 0, 0.1) 4px 4px;
-  }  
+  }
+}
+
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center
+  }
 }
 
 
