--- a/app/views/shared/_likeable_button.html.erb
+++ b/app/views/shared/_likeable_button.html.erb
@@ -9,6 +9,6 @@
         <i class="far fa-thumbs-up fa-xl cursor-pointer"></i>
       <% end %>
     <% end %>
-    <span class="text-xs text-gray-600"><%= likeable.likes.length %></span>
+    <span class="text-xs text-gray-600"><%= likeable.likes_count %></span>
   </div>
 </div>
